# rust-licenses-noticer

./: .gitignore  CHANGELOG.md  Cargo.toml  Makefile  README.md  THIRD_PARTY_NOTICES.md  THIRD_PARTY_NOTICES.md.tmpl  action.yml  deny.toml  flake.nix
.github/: CODEOWNERS  renovate.json  renovate.json5
.github/workflows/: on_demand_generate_prerelease_pr.yml  on_pr_check_changelog.yml  repolinter.yml  tests-nix-docker.yml  tests-nix.yml  tests.yml  third_party_licenses_check.yml
nix/checks/: crane-audit.nix  crane-clippy.nix  crane-deny.nix  crane-doc.nix  crane-fmt.nix  crane-nextest.nix  crane-toml-fmt.nix  git-hooks-basic.nix  git-hooks-crane-rust-toolchain.nix  git-hooks.nix
nix/devshells/: basic.nix  crane.nix  default.nix  numtide-devshell.toml  with-git-hooks.nix
nix/lib/: default.nix
src/: cargo_deny_list.rs  lib.rs  main.rs  template.rs
src/templates/: THIRD_PARTY_NOTICES.md.tmpl
tests/golden/: README.md  main.rs
tests/golden/fixtures/: THIRD_PARTY_NOTICES.md.tmpl  cargo_deny_output.json  expected_third_party_notices_file.md
tests/golden/fixtures/templates/: THIRD_PARTY_NOTICES.md.tmpl
third_party_licenses_templates/: THIRD_PARTY_NOTICES.md.tmpl
