[package]
name = "rust-licenses-noticer"
version = "1.0.0"
authors = ["The New Relic Agent Control Team"]
edition = "2024"
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.6.0", features = ["derive"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
tera = "1.20.0"
thiserror = "2.0.11"

[dev-dependencies]
assert_cmd = "2.2.0"
assert_fs = "1.1.3"
predicates = "3.1.4"

[lints.rust]
missing_docs = "warn"

[lints.clippy]
missing_docs_in_private_items = "warn"
