[package]
name = "rust-licenses-noticer"
version = "1.0.4"
authors = ["The New Relic Agent Control Team"]
edition = "2024"
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.6.4", features = ["derive"] }
serde = { version = "1.0.229", features = ["derive"] }
serde_json = "1.0.151"
tera = { version = "2.0.0", features = ["preserve_order"] }
thiserror = "2.0.19"

[dev-dependencies]
assert_cmd = "2.2.2"
assert_fs = "1.1.4"
predicates = "3.1.4"

[lints.rust]
missing_docs = "warn"

[lints.clippy]
missing_docs_in_private_items = "warn"
